[package]
name = "repust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Proxy for Redis and Memcached with Active-Active Replication and Multi Region Support"
readme = "README.md"
homepage = "github.com/saeidakbari/repust"
repository = "github.com/saeidakbari/repust"

authors = ["Saeid Akbari <saeidakbari.work@gmail.com>"]
categories = ["cli", "rust", "repust", "redis", "memcache", "replication"]
keywords = ["cli", "rust", "repust", "redis", "memcache", "replication"]

[lib]
name = "librepust"
path = "src/lib.rs"

[[bin]]
name = "repust"
path = "src/main.rs"

[dependencies]
aho-corasick = "1.1.2"
assert2 = "0.3.11"
axum = "0.7.4"
bitflags = "2.4.2"
btoi = "0.4.3"
byteorder = "1.5.0"
bytes = "1.5.0"
clap = { version = "4.5.3", features = ["derive"] }
crossbeam-channel = "0.5.12"
crossbeam-utils = "0.8.19"
env_logger = "0.11.3"
futures = "0.3.30"
hotwatch = "0.5.0"
log = "0.4.20"
md5 = "0.7.0"
network-interface = "1.1.1"
opentelemetry = { version = "0.21.0", features = ["metrics"] }
opentelemetry-prometheus = "0.14.1"
opentelemetry_sdk = { version = "0.21.2", features = ["metrics"] }
pin-project = "1.1.4"
prometheus = "0.13.3"
serde = { version = "1.0.195", features = ["derive"] }
socket2 = "0.5.5"
sysinfo = { version = "0.30.5", default-features = false }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["net", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
toml = "0.8.8"
